--- a/manifest.json
+++ b/manifest.json
@@ -10,14 +10,26 @@
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "icons/logo192.png",
+            "src": "icons/Icon192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icons/logo512.png",
+            "src": "icons/Icon512.png",
             "sizes": "512x512",
             "type": "image/png"
+        },
+        {
+            "src": "icons/Icon192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
+            "src": "icons/Icon512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
         }
     ]
 }
